test/spec/simd/simd_splat.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_splat.wast
(;; STDOUT ;;;
out/test/spec/simd/simd_splat.wast:122: assert_malformed passed:
  out/test/spec/simd/simd_splat/simd_splat.1.wat:1:22: error: unexpected token "v128.splat", expected an instr.
  (func (result v128) (v128.splat (i32.const 0)))
                       ^^^^^^^^^^
out/test/spec/simd/simd_splat.wast:127: assert_invalid passed:
  error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:128: assert_invalid passed:
  error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:129: assert_invalid passed:
  error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:130: assert_invalid passed:
  error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:131: assert_invalid passed:
  error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:132: assert_invalid passed:
  error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:133: assert_invalid passed:
  error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:134: assert_invalid passed:
  error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:135: assert_invalid passed:
  error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:136: assert_invalid passed:
  error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:137: assert_invalid passed:
  error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:138: assert_invalid passed:
  error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:139: assert_invalid passed:
  error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:140: assert_invalid passed:
  error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:141: assert_invalid passed:
  error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:142: assert_invalid passed:
  error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:384: assert_invalid passed:
  error: type mismatch in i8x16.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:392: assert_invalid passed:
  error: type mismatch in i16x8.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:400: assert_invalid passed:
  error: type mismatch in i32x4.splat, expected [i32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:408: assert_invalid passed:
  error: type mismatch in f32x4.splat, expected [f32] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:416: assert_invalid passed:
  error: type mismatch in i64x2.splat, expected [i64] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_splat.wast:424: assert_invalid passed:
  error: type mismatch in f64x2.splat, expected [f64] but got []
  000001a: error: OnUnaryExpr callback failed
181/181 tests passed.
;;; STDOUT ;;)
